project/stage/tests/accept/function_body.ul
int main(){
  int thing;
  thing = "hi";
}