project/stage/tests/reject/reject_bad_main_type.ul
void func(){
  print "doing a thing";
}

int main(int thing){
}
